--- a/InicioJava/JavaPOO-main/OrientacaoObjetoITA/CompraParceladaJuros/.project
+++ b/InicioJava/JavaPOO-main/OrientacaoObjetoITA/CompraParceladaJuros/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exerciciosHandsOn</name>
+	<name>CompraParceladaJuros</name>
 	<comment></comment>
 	<projects>
 	</projects>
