--- a/Arquivos/Projetos/rest-with-spring-boot-and-java-erudio/RestAPIComJava/08_conexao_com_banco_de_dados/src/main/resources/application.yml
+++ b/Arquivos/Projetos/rest-with-spring-boot-and-java-erudio/RestAPIComJava/08_conexao_com_banco_de_dados/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 spring:
   datasource:
     driver-class-name: oracle.jdbc.OracleDriver
-    url: jdbc:oracle:thin:@localhost:1521:XEPDB1
+    url: jdbc:oracle:thin:@localhost:1521/XEPDB1
     username: rest_api
-    password: resp_api
+    password: rest_api
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.Oracle12gDialect
-      show-sql: false
+# DEIXAR COMENTADO, POIS EXISTE UM BUG AINDA NÃO REOVIDO. COMENTANDO AQUI RODA NORMALMENTE
+#   properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.Oracle11gDialect 
+    show-sql: false
