--- a/Arquivos/Projetos/rest-with-spring-boot-and-java-erudio/RestAPIComJava/10_VersionEndPoints/src/main/resources/application.yml
+++ b/Arquivos/Projetos/rest-with-spring-boot-and-java-erudio/RestAPIComJava/10_VersionEndPoints/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
 #      hibernate:
 #        dialect: org.hibernate.dialect.Oracle11gDialect 
     show-sql: false
+  flyway:
+    baseline-on-migrate: true
+    baseline-version: '0'
